fix(movingColumn): moving column with horizontal scroll [SO-1333600]

--- a/ui-grid.css
+++ b/ui-grid.css
@@ -1182,7 +1182,7 @@ div.ui-grid-cell input.ng-valid {
 */
 /*-- END VARIABLES (DO NOT REMOVE THESE COMMENTS) --*/
 .movingColumn {
-  position: absolute;
+  position: fixed;
   top: 0;
   border: 1px solid #d4d4d4;
   box-shadow: inset 0 0 14px rgba(0, 0, 0, 0.2);
